--- a/index.html
+++ b/index.html
@@ -7,18 +7,22 @@
 	
 	<!-- Meta information -->
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-	<meta name="viewport" content="width=device-width" />
-	
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="format-detection" content="telephone=no">
+	<meta name="HandheldFriendly" content="true">
+	<meta content="IE=edge" http-equiv="X-UA-Compatible">
+	<meta name="robots" content="noodp, noydir">
+	<meta name="theme-color" content="#1279c0"/>
 	<!-- Favicon -->
 	
 	
 	<!-- CSS -->
-	<link rel="stylesheet" type="text/css" href="http://hellobrand.ru/unitedsolutions/css/style.css" media="all" />
-
+	<link rel="stylesheet" type="text/css" href="css/style.css" media="all" />
+	
 	<!-- Scripts -->
-	<script src="../../ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js" type="text/javascript"></script>
+	<script src="vendor/ajax/libs/jquery/1.11." type="text/javascript"></script>
 	<script type="text/javascript">/* <![CDATA[ */ window.jQuery || document.write('<script type="text/javascript" src="http://hellobrand.ru/unitedsolutions/js/jquery-1.11.0.min.js">\x3C/script>') /* ]]> */</script>
-	<script src="../../code.jquery.com/jquery-migrate-1.2.1.min.js" type="text/javascript"></script>
+	<script src="vendor/jquery-migrate-1.2.1.min.js" type="text/javascript"></script>
 	<script type="text/javascript" src="http://hellobrand.ru/unitedsolutions/js/jquery_plugins.js"></script>
 	
 	<!-- IE -->
@@ -52,13 +56,13 @@
 <div class="wrapper">
 
 	<div class="name">
-		<img src="img/logo.png" alt="attila" style="width:120px; position: absolute;">
+		<img src="images/logo.png" alt="attila" style="width:120px; position: absolute;">
 	</div>
 	<div class="social-block" style="padding-left: 300px">
-		<a href="#"><img src="img/1600.png" alt="" style="width:30px;margin-right: 15px"></a>
-		<a href="#"><img src="img/instagram_icon-icons.com_49943.png" alt="" style="width:30px;"></a>
+		<a href="#"><img src="images/1600.png" alt="" style="width:30px;margin-right: 15px"></a>
+		<a href="#"><img src="images/instagram_icon-icons.com_49943.png" alt="" style="width:30px;"></a>
 		<a href="tel:88005558927" class="phone">
-		<img src="img/WhatsApp.png" alt="" style="width:50px;">+996 (555) 577 100
+		<img src="images/WhatsApp.png" alt="" style="width:50px;">+996 (555) 577 100
 	</a>
 	</div>
 	
@@ -284,8 +288,7 @@
 	</span>
 	</h2>
 	
-	<!-- Logos -->
-		<a href="#"><img src="img/logo.png" alt=""></a>
+		<a href="http://attila.kg/"><img src="images/mark.png" alt=""></a>
 	
 	<div class="clear"></div>
 
@@ -327,16 +330,16 @@
 	<!-- Footer -->
 	<footer style="width:100%;">
 		<div class="name">
-		<img src="img/logo.png" alt="attila" style="width:120px; position: absolute;">
+		<img src="images/logo.png" alt="attila" style="width:120px; position: absolute;">
 	</div>
 	<div class="social-block" style="padding-left: 300px">
-		<a href="#"><img src="img/1600.png" alt="" style="width:30px;margin-right: 15px"></a>
-		<a href="#"><img src="img/instagram_icon-icons.com_49943.png" alt="" style="width:30px;"></a>
+		<a href="#"><img src="images/1600.png" alt="" style="width:30px;margin-right: 15px"></a>
+		<a href="#"><img src="images/instagram_icon-icons.com_49943.png" alt="" style="width:30px;"></a>
 		<a href="tel:88005558927" class="phone">
-		<img src="img/WhatsApp.png" alt="" style="width:50px;">+996 (555) 577 100
+		<img src="images/WhatsApp.png" alt="" style="width:50px;">+996 (555) 577 100
 	</a>
 	</div>
-		<!-- <img src="img/mark.png" alt="" style="width:120px;">
+		<!-- <img src="images/mark.png" alt="" style="width:120px;">
 		<b>
 	
 		</b>
