--- a/index.html
+++ b/index.html
@@ -58,12 +58,11 @@
 	<div class="name">
 		<img src="images/logo.png" alt="attila" style="width:120px; position: absolute;">
 	</div>
-	<div class="social-block" style="padding-left: 300px">
+	<div class="social-block" style="padding-left: 300px;float: right;">
+		<img src="images/WhatsApp.png" alt="" style="width:30px;padding-top: 5px;">
+		<a href="tel:88005558927" class="phone">+996 (555) 577 100</a>
 		<a href="#"><img src="images/1600.png" alt="" style="width:30px;margin-right: 15px"></a>
 		<a href="#"><img src="images/instagram_icon-icons.com_49943.png" alt="" style="width:30px;"></a>
-		<a href="tel:88005558927" class="phone">
-		<img src="images/WhatsApp.png" alt="" style="width:50px;">+996 (555) 577 100
-	</a>
 	</div>
 	
 	
@@ -82,7 +81,7 @@
 	<!-- Items -->
 	
 		<!-- item 1 -->
-		<h3 style="color: #fff; font-size: 32px;margin: 0;font-weight: 900; padding-bottom: 20px;">Призовой фонд 5000$</h3>
+		<h3 style="color: #fff; font-size: 50px;margin: 0;font-weight: 900; padding-bottom: 20px;">Призовой фонд 5000$</h3>
 		<div class="item-1">
 		<div class="cell">
 			
@@ -146,7 +145,7 @@
 			
 			<input type="hidden" name="send_type" value="1" />
 			<input type="hidden" name="send_extra" value="2" />
-			
+			<input type="file" атрибуты>
 			<input type="submit" class="button cre-animate" data-animation="slide-up-from-bottom" data-speed="800" data-delay="0" data-offset="90%" data-easing="easeOutBack" value="Оставить заявку" />
 			
 		</div>		
@@ -185,7 +184,7 @@
 
 	<!-- Header -->
 	<h2 class="cre-animate" data-animation="slide-down-from-top" data-speed="1000" data-delay="0" data-offset="90%" data-easing="easeOutBack">
-	<span>
+	<span class="caption">
 		Как это будет происходить <b></b>
 	</span>
 	</h2>
@@ -212,27 +211,11 @@
 	<div class="arrow"></div>
 		
 		<!-- item 2 -->
-		<div class="item-2 icon cre-animate" data-animation="slide-in-from-right" data-speed="1000" data-delay="0" data-offset="90%" data-easing="ease">
-			<!-- left text -->
-			<b>
-			<span class="cell">
-				Проводиться отбор участниц
-			</span>
-			</b>
-			<!-- right text -->
-			<div class="right">
-			
-			</div>
-		</div>
-		
-	<div class="arrow"></div>
-		
-		<!-- item 3 -->
 		<div class="item-3 icon cre-animate" data-animation="slide-in-from-left" data-speed="1000" data-delay="0" data-offset="90%" data-easing="ease">
 			<!-- left text -->
 			<b>
 			<span class="cell">
-				Наш специалист консультирует Вас
+				Проводиться отбор участниц
 			</span>
 			</b>
 			<!-- right text -->
@@ -242,6 +225,22 @@
 			</div>
 		</div>
 		
+	<div class="arrow"></div>
+		
+		<!-- item 3 -->
+		
+		<div class="item-2 icon cre-animate" data-animation="slide-in-from-right" data-speed="1000" data-delay="0" data-offset="90%" data-easing="ease">
+			<!-- left text -->
+			<b>
+			<span class="cell">
+				Наш специалист консультирует Вас
+			</span>
+			</b>
+			<!-- right text -->
+			<div class="right">
+			
+			</div>
+		</div>
 	<div class="arrow"></div>
 		
 		<!-- item 4 -->
@@ -283,15 +282,33 @@
 
 	<!-- Header -->
 	<h2 class="cre-animate" data-animation="slide-up-from-bottom" data-speed="800" data-delay="0" data-offset="90%" data-easing="easeOutBack">
+		<p style="font-size: 30px;">Генеральный спонсор</p>
+		<a href="http://attila.kg/" style="display: block;"><img src="images/mark.png" alt="" style="margin: 0 auto"></a>
 	<span>
 		<b>НАШИ</b> партнеры
 	</span>
 	</h2>
 	
-		<a href="http://attila.kg/"><img src="images/mark.png" alt=""></a>
 	
 	<div class="clear"></div>
-
+	<div class="judges">
+		<h2>Состав жюри:</h2>
+		<div class="judge">
+			<img src="images/no-photo.png" alt="photo miss">
+			<p>Скрыто</p>
+			<b></b>
+		</div>
+		<div class="judge">
+			<img src="images/miss.jpg" alt="photo miss">
+			<p>lukina.galina</p>
+			<b>Miss Bashkortostan</b>
+		</div>
+		<div class="judge">
+			<img src="images/no-photo.png" alt="photo miss">
+			<p>Скрыто</p>
+			<b></b>
+		</div>
+	</div>
 </div>
 </section>
 
@@ -319,7 +336,7 @@
 			
 			<input type="hidden" name="send_type" value="1" />
 			<input type="hidden" name="send_extra" value="2" />
-			
+			<input type="file" атрибуты placeholder="foto">
 			<input type="submit" class="button cre-animate" data-animation="slide-up-from-bottom" data-speed="800" data-delay="0" data-offset="90%" data-easing="easeOutBack" value="Оставить заявку" />
 			
 		</div>		
@@ -332,12 +349,11 @@
 		<div class="name">
 		<img src="images/logo.png" alt="attila" style="width:120px; position: absolute;">
 	</div>
-	<div class="social-block" style="padding-left: 300px">
+	<div class="social-block" style="padding-left: 300px;float: right;">
+		<img src="images/WhatsApp.png" alt="" style="width:30px;padding-top: 5px;">
+		<a href="tel:88005558927" class="phone">+996 (555) 577 100</a>
 		<a href="#"><img src="images/1600.png" alt="" style="width:30px;margin-right: 15px"></a>
 		<a href="#"><img src="images/instagram_icon-icons.com_49943.png" alt="" style="width:30px;"></a>
-		<a href="tel:88005558927" class="phone">
-		<img src="images/WhatsApp.png" alt="" style="width:50px;">+996 (555) 577 100
-	</a>
 	</div>
 		<!-- <img src="images/mark.png" alt="" style="width:120px;">
 		<b>
@@ -382,10 +398,10 @@
 			<input type="text" name="client_name" placeholder="Ваше имя" />
 			<input type="tel" name="client_phone" placeholder="Ваш телефон" />
 			<input type="email" name="client_mail" placeholder="Ваш e-mail" />
-			
 			<input type="hidden" name="send_type" value="1" />
 			<input type="hidden" name="send_extra" value="3" />
 			
+			<input type="file" атрибуты>
 			<input type="submit" class="button" value="Оставить заявку" />
 
 		</form>
