--- a/index.html
+++ b/index.html
@@ -59,9 +59,9 @@
 		<img src="images/logo.png" alt="attila" style="width:120px; position: absolute;">
 	</div>
 	<div class="social-block" style="padding-left: 300px;float: right;">
-		<img src="images/WhatsApp.png" alt="" style="width:30px;padding-top: 5px;">
+		<img src="images/WhatsApp.png" alt="" style="width:30px;">
 		<a href="tel:88005558927" class="phone">+996 (555) 577 100</a>
-		<a href="#"><img src="images/1600.png" alt="" style="width:30px;margin-right: 15px"></a>
+		<a href="#"><img src="images/1600.png" alt="" style="width:30px;margin-right: 15px;margin-left: 15px;margin-top: 8px;"></a>
 		<a href="#"><img src="images/instagram_icon-icons.com_49943.png" alt="" style="width:30px;"></a>
 	</div>
 	
@@ -81,7 +81,7 @@
 	<!-- Items -->
 	
 		<!-- item 1 -->
-		<h3 style="color: #fff; font-size: 50px;margin: 0;font-weight: 900; padding-bottom: 20px;">Призовой фонд 5000$</h3>
+		<h3 style="color: #fff; font-size: 50px;margin: 0;font-weight: 900; padding-bottom: 20px;" class="caption2">Призовой фонд 5000$</h3>
 		<div class="item-1">
 		<div class="cell">
 			
@@ -163,8 +163,8 @@
 
 	<!-- Header -->
 	<h2 class="cre-animate" data-animation="slide-in-from-left" data-speed="1000" data-delay="0" data-offset="90%" data-easing="easeOutBack">
-	<span>
-		<b>Видео-приглашение
+	<span class="caption3">
+		Видео-приглашение
 	</span>
 	</h2>
 	<iframe width="800" height="618" src="https://www.youtube.com/embed/KkUdNkXMuFE" frameborder="0" gesture="media" allowfullscreen></iframe>
