--- a/index.html
+++ b/index.html
@@ -74,14 +74,14 @@
 		<b>
 	
 		</b>
-			Miss Attila 2017
+			Miss Attila 2018
 	</span>
 	</h1>
 	
 	<!-- Items -->
 	
 		<!-- item 1 -->
-		<h3 style="color: #fff; font-size: 50px;margin: 0;font-weight: 900; padding-bottom: 20px;" class="caption2">Призовой фонд 5000$</h3>
+		<h3 style="color: #fff; font-size: 50px;margin: 0;font-weight: 900; padding-bottom: 20px;" class="caption2">Призовой фонд 3000$</h3>
 		<div class="item-1">
 		<div class="cell">
 			
@@ -139,7 +139,7 @@
 			</p>
 		
 			<input type="text" name="#" placeholder="ФИО" />
-			<input type="tel" name="#" placeholder="Возраст (от 18 до 30 лет)" />
+			<input type="tel" name="#" placeholder="Возраст (от 18)" />
 			<input type="email" name="#" placeholder="Рост (от 175см)" />
 			<input type="email" name="#" placeholder="Номер телефона" />
 			
@@ -167,7 +167,8 @@
 		Видео-приглашение
 	</span>
 	</h2>
-	<iframe width="800" height="618" src="https://www.youtube.com/embed/KkUdNkXMuFE" frameborder="0" gesture="media" allowfullscreen></iframe>
+	<iframe width="800" height="618" src="https://www.youtube.com/embed/JEB9EuwEnbY?autoplay=1&loop=1" frameborder="0" gesture="media" allowfullscreen></iframe>
+
 	
 
 				
@@ -182,8 +183,8 @@
 <section id="how">
 <div class="wrapper">
 
-	<!-- Header -->
-	<h2 class="cre-animate" data-animation="slide-down-from-top" data-speed="1000" data-delay="0" data-offset="90%" data-easing="easeOutBack">
+		<!-- Header -->
+<h2 class="cre-animate" data-animation="slide-down-from-top" data-speed="1000" data-delay="0" data-offset="90%" data-easing="easeOutBack">
 	<span class="caption">
 		Как это будет происходить <b></b>
 	</span>
@@ -330,7 +331,7 @@
 			</p>
 		
 			<input type="text" name="#" placeholder="ФИО" />
-			<input type="tel" name="#" placeholder="Возраст (от 18 до 30 лет)" />
+			<input type="tel" name="#" placeholder="Возраст (от 18)" />
 			<input type="email" name="#" placeholder="Рост (от 175см)" />
 			<input type="email" name="#" placeholder="Номер телефона" />
 			
@@ -349,7 +350,10 @@
 		<div class="name">
 		<img src="images/logo.png" alt="attila" style="width:120px; position: absolute;">
 	</div>
-	<div class="social-block" style="padding-left: 300px;float: right;">
+	<div class="map">		
+	</div>
+
+	<div class="social-block" style="float: right;">
 		<img src="images/WhatsApp.png" alt="" style="width:30px;padding-top: 5px;">
 		<a href="tel:88005558927" class="phone">+996 (555) 577 100</a>
 		<a href="#"><img src="images/1600.png" alt="" style="width:30px;margin-right: 15px"></a>
@@ -370,6 +374,7 @@
 
 </div>
 </section>
+		<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2926.4517060901467!2d74.61444551536098!3d42.82107131385543!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x389eb5de282b3d09%3A0xdd1b112ebedcc2df!2sAttila+steak+house!5e0!3m2!1sru!2sus!4v1511341677471" width="80" height="50" frameborder="0" style="border:0" allowfullscreen></iframe>
 
 
 
