--- a/index.html
+++ b/index.html
@@ -59,10 +59,11 @@
 		<img src="images/logo.png" alt="attila" style="width:120px; position: absolute;">
 	</div>
 	<div class="social-block" style="padding-left: 300px;float: right;">
+		<img src="images/phone-icon.png" alt="" style="width:30px;">
 		<img src="images/WhatsApp.png" alt="" style="width:30px;">
 		<a href="tel:88005558927" class="phone">+996 (555) 577 100</a>
-		<a href="#"><img src="images/1600.png" alt="" style="width:30px;margin-right: 15px;margin-left: 15px;margin-top: 8px;"></a>
-		<a href="#"><img src="images/instagram_icon-icons.com_49943.png" alt="" style="width:30px;"></a>
+		<a href="https://www.facebook.com/attilasteak" target="_blank"><img src="images/1600.png" alt="" style="width:30px;margin-right: 15px;margin-left: 15px;"></a>
+		<a href="https://www.instagram.com/attilasteak/" target="_blank"><img src="images/instagram_icon-icons.com_49943.png" alt="" style="width:25px;margin-top: 8px;"></a>
 	</div>
 	
 	
@@ -167,7 +168,7 @@
 		Видео-приглашение
 	</span>
 	</h2>
-	<iframe width="800" height="618" src="https://www.youtube.com/embed/JEB9EuwEnbY?autoplay=1&loop=1" frameborder="0" gesture="media" allowfullscreen></iframe>
+	<iframe width="800" height="618" src="https://www.youtube.com/embed/JEB9EuwEnbY<!-- ?autoplay=1&loop=1 -->" frameborder="0" gesture="media" allowfullscreen></iframe>
 
 	
 
@@ -347,18 +348,8 @@
 	
 	<!-- Footer -->
 	<footer style="width:100%;">
-		<div class="name">
-		<img src="images/logo.png" alt="attila" style="width:120px; position: absolute;">
-	</div>
-	<div class="map">		
-	</div>
 
-	<div class="social-block" style="float: right;">
-		<img src="images/WhatsApp.png" alt="" style="width:30px;padding-top: 5px;">
-		<a href="tel:88005558927" class="phone">+996 (555) 577 100</a>
-		<a href="#"><img src="images/1600.png" alt="" style="width:30px;margin-right: 15px"></a>
-		<a href="#"><img src="images/instagram_icon-icons.com_49943.png" alt="" style="width:30px;"></a>
-	</div>
+
 		<!-- <img src="images/mark.png" alt="" style="width:120px;">
 		<b>
 	
@@ -376,7 +367,24 @@
 </section>
 		<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2926.4517060901467!2d74.61444551536098!3d42.82107131385543!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x389eb5de282b3d09%3A0xdd1b112ebedcc2df!2sAttila+steak+house!5e0!3m2!1sru!2sus!4v1511341677471" width="80" height="50" frameborder="0" style="border:0" allowfullscreen></iframe>
 
-
+<div class="footer">
+	<div class="wrapper">	
+		<div class="name">
+			<img src="images/logo.png" alt="attila" style="width:120px; position: absolute;">
+		</div>
+		<div class="contacts">
+			<p>Адрес: Кыргызстан, г. Бишкек, Аалы Токомбаев 21/2</p>
+			<img src="images/phone-icon.png" alt="" style="width:30px;">
+			<img src="images/WhatsApp.png" alt="" style="width:30px;padding-top: 5px;">
+			<a href="tel:88005558927" class="phone">+996 (555) 577 100</a>
+			<i>ATTILA.KG © 2017. Все права защищены</i>
+		</div>
+		<div class="social-block" style="float: right;">
+			<a href="https://www.facebook.com/attilasteak" target="_blank" style="display: block;padding-top: 15px;padding-bottom: 15px;"><img src="images/1600.png" alt="" style="width:30px;margin-right: 15px"></a>
+			<a href="https://www.instagram.com/attilasteak/" target="_blank"><img src="images/instagram_icon-icons.com_49943.png" alt="" style="width:30px;"></a>
+		</div>
+	</div>
+</div>
 
 <!-- Modal Windows Start -->
 
