--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
 		Видео-приглашение
 	</span>
 	</h2>
-	<iframe width="800" height="618" src="https://www.youtube.com/embed/JEB9EuwEnbY<!-- ?autoplay=1&loop=1 -->" frameborder="0" gesture="media" allowfullscreen></iframe>
+	<iframe width="800" height="618" src="https://www.youtube.com/embed/JEB9EuwEnbY?autoplay=1&loop=1" frameborder="0" gesture="media" allowfullscreen></iframe>
 
 	
 
