--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 		<img src="images/phone-icon.png" alt="" style="width:30px;">
 		<img src="images/WhatsApp.png" alt="" style="width:30px;">
 		<a href="tel:88005558927" class="phone">+996 (555) 577 100</a>
-		<a href="https://www.facebook.com/attilasteak" target="_blank"><img src="images/1600.png" alt="" style="width:30px;margin-right: 7px;margin-left: 7px;"></a>
+		<a href="https://www.facebook.com/attilasteak" target="_blank"><img src="images/1600.png" alt="" style="width:25px;margin-right: 7px;margin-left: 7px;"></a>
 		<a href="https://www.instagram.com/attilasteak/" target="_blank"><img src="images/instagram_icon-icons.com_49943.png" alt="" style="width:25px;margin-right: 7px;margin-left: 7px;"></a>
 	</div>
 	
@@ -88,7 +88,7 @@
 		<div class="item-1">
 		<div class="cell">
 			<span class="note" style="width:100%;"></span>
-			<b><span class="count">1000</span>$</b>Первое место
+			<b>$<span class="count">1000</span></b>Первое место
 			
 		</div>
 		</div>
@@ -96,14 +96,14 @@
 		<!-- item 2 -->
 		<div class="item-2">
 		<div class="cell">	
-			<b><span class="count">500</span>$</b>Второе место
+			<b>$<span class="count">500</span></b>Второе место
 		</div>
 		</div>
 		
 		<!-- item 3 -->
 		<div class="item-3">
 		<div class="cell">
-			<b><span class="count">300</span>$</b>Третье место	
+			<b>$<span class="count">300</span></b>Третье место	
 		</div>
 		</div>
 		
