--- a/index.html
+++ b/index.html
@@ -501,9 +501,8 @@
 <!-- Modal Windows End -->
 
 	<script type="text/javascript" src="js/jquery-2.2.4.min.js"></script>
-	<script type="text/javascript" src="http://hellobrand.ru/unitedsolutions/js/main.js"></script>
+	<script type="text/javascript" src="js/main.js"></script>
 	<script type="text/javascript" src="vendor/slick/slick.min.js"></script>
-	<script type="text/javascript" src="js/core.js"></script>
 			
 		<script>
 			jQuery('form').each(function(){$(this).append('<textarea name="si_engine" class="si_engine" style="display:none"></textarea>');})
