--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 	<div class="name">
 		<img src="images/logo.png" alt="attila" style="width:120px; position: absolute;">
 	</div>
-	<div class="social-block" style="padding-left: 300px;float: right;">
+	<div class="social-block" style="padding-left: 120px;float: right;">
 		<img src="images/phone-icon.png" alt="" style="width:30px;">
 		<img src="images/WhatsApp.png" alt="" style="width:30px;">
 		<a href="tel:88005558927" class="phone">+996 (555) 577 100</a>
@@ -72,9 +72,9 @@
 	<div class="clear"></div>
 	
 	<!-- Header -->
-	<h1>
+	<h1 class="big-caption">
 	<span>
-		<b></b>Miss Attila 2018
+		Miss Attila 2018
 	</span>
 	</h1>
 	<div class="description">	
@@ -323,6 +323,7 @@
 		<div class="slider-item"><img src="images/photo4.jpeg" alt=""></div>
 		<div class="slider-item"><img src="images/photo5.jpeg" alt=""></div>
 		<div class="slider-item"><img src="images/photo6.jpeg" alt=""></div>
+		<div class="slider-item"><img src="images/photo7.jpeg" alt=""></div>
 	</div>
 </div>
 </section>
