--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 	<!-- Items -->
 	
 		<!-- item 1 -->
-		<h3 style="color: #fff; font-size: 50px;margin: 0;font-weight: 900; padding-bottom: 20px;" class="caption2">Призовой фонд $3000</h3>
+		<h3 style="color: #000; font-size: 50px;margin: 0;font-weight: 900; padding-bottom: 20px;" class="caption2">Призовой фонд $3000</h3>
 		<div class="item-1">
 		<div class="cell">
 			<span class="note" style="width:100%;"></span>
