--- a/index.html
+++ b/index.html
@@ -41,20 +41,8 @@
 <!-- Header -->
 <header>
 	
-	<!-- Overlay -->
 	<div class="overlay"><div class="dots"></div></div>
 
-	<!-- Video -->
-<!-- 	<div class="video">
-	
-	<video width="1980" preload="auto" id="video" loop="loop" autoplay="autoplay">
-		<source src="http://hellobrand.ru/unitedsolutions/video/video.webm" type="video/webm">
-		<source src="http://hellobrand.ru/unitedsolutions/video/video.ogv" type="video/ogg">
-		<source src="http://hellobrand.ru/unitedsolutions/video/video.mp4" type="video/mp4">
-	</video>
-	
-	</div>	
- -->
 <div class="wrapper">
 
 	<div class="name">
@@ -78,7 +66,7 @@
 	</span>
 	</h1>
 	<div class="description">	
-		<h2>Описание:</h2>
+		<h2>О проекте:</h2>
 		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia ab voluptas quis deserunt in, quas ad aperiam laborum accusamus voluptate. Non, culpa. Mollitia illum maxime, aperiam ratione nisi et explicabo.</p>
 		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia ab voluptas quis deserunt in, quas ad aperiam laborum accusamus voluptate. Non, culpa. Mollitia illum maxime, aperiam ratione nisi et explicabo.</p>
 	</div>
@@ -109,12 +97,6 @@
 		</div>
 		
 	<div class="clear"></div>
-
-	<!-- <a href="#" class="more_link">Смотреть больше...</a>
-        <div class="mobile_content">
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempora deserunt iusto quasi nam corrupti eveniet pariatur voluptatum tempore eum, rerum ut aperiam fugiat reiciendis velit, vero, odit odio. Suscipit, nisi.</p>
-        </div> -->
-	<!-- Form -->
 
 <a href="#" id="go" class="pulse">Принять участие!</a>
 <div id="modal_form"><!-- Сaмo oкнo --> 
@@ -510,42 +492,8 @@
 			jQuery('form').each(function(){$(this).append('<textarea name="si_utm" class="si_utm" style="display:none"></textarea>');})
 		</script>
 				
-			
-<!-- Yandex.Metrika counter -->
-<script type="text/javascript">
-(function (d, w, c) {
-    (w[c] = w[c] || []).push(function() {
-        try {
-            w.yaCounter26265405 = new Ya.Metrika({id:26265405,
-                    webvisor:true,
-                    clickmap:true,
-                    trackLinks:true,
-                    accurateTrackBounce:true});
-        } catch(e) { }
-    });
 
-    var n = d.getElementsByTagName("script")[0],
-        s = d.createElement("script"),
-        f = function () { n.parentNode.insertBefore(s, n); };
-    s.type = "text/javascript";
-    s.async = true;
-    s.src = (d.location.protocol == "https:" ? "https:" : "http:") + "//mc.yandex.ru/metrika/watch.js";
-
-    if (w.opera == "[object Opera]") {
-        d.addEventListener("DOMContentLoaded", f, false);
-    } else { f(); }
-})(document, window, "yandex_metrika_callbacks");
-</script>
 <noscript><div><img src="http://mc.yandex.ru/watch/26265405" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
-<!-- /Yandex.Metrika counter -->
-	
-	<!--
-		Проект: United Solutions
-		Создатель: Рекламное агентство “Hello, Brand!” - http://hello-brand.ru/
-		Дата: 19.09.2014
-		Версия: 1.0
-	-->
-	
 </div>
 <script>
        $('a#go').click( function(event){ // лoвим клик пo ссылки с id="go"
@@ -568,7 +516,6 @@
 			);
 	});
     </script>
-</body>
 <script>
 	$('.autoplay').slick({
 		  autoplay: true,
@@ -601,13 +548,9 @@
         slidesToScroll: 1
       }
     }
-    // You can unslick at a given breakpoint now by adding:
-    // settings: "unslick"
-    // instead of a settings object
   ]
 		});
 
 </script>
-
-<!-- Mirrored from hellobrand.ru/unitedsolutions/ by HTTrack Website Copier/3.x [XR&CO'2014], Tue, 21 Nov 2017 09:49:36 GMT -->
+</body>
 </html>
