--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
 		<!-- Header -->
 <h2 class="cre-animate" data-animation="slide-down-from-top" data-speed="1000" data-delay="0" data-offset="90%" data-easing="easeOutBack">
 	<span class="caption">
-		Как это будет происходить <b></b>
+		Ваши шаги к победе: <b></b>
 	</span>
 	</h2>
 	
@@ -175,7 +175,7 @@
 			<!-- left text -->
 			<b>
 			<span class="cell">
-				Вы оставляете заявку на сайте или по телефону
+				Оставить заявку на сайте или по телефону не позднее 7 декабря
 			</span>
 			</b>
 		</div>
@@ -187,7 +187,7 @@
 			<!-- left text -->
 			<b>
 			<span class="cell">
-				Мы просматриваем все заявки
+				Пройти отбор участниц до 10 декабря
 			</span>
 			</b>
 			<!-- right text -->
@@ -205,7 +205,7 @@
 			<!-- left text -->
 			<b>
 			<span class="cell">
-				Проводиться отбор участниц
+				Получить уроки танцев, дефиле и искусства стрельбы
 			</span>
 			</b>
 			<!-- right text -->
@@ -216,25 +216,25 @@
 	<div class="arrow"></div>
 		
 		<!-- item 4 -->
-		<div class="item-4 icon cre-animate" data-animation="slide-in-from-right" data-speed="1000" data-delay="0" data-offset="90%" data-easing="ease">
-			<!-- left text -->
+		<!-- <div class="item-4 icon cre-animate" data-animation="slide-in-from-right" data-speed="1000" data-delay="0" data-offset="90%" data-easing="ease">
+		
 			<b>
 			<span class="cell">
 				Оказываем необходимую поддержку
 			</span>
 			</b>
-			<!-- right text -->
+			
 			<div class="right">
 					
 							</div>
-		</div>
-		
-	<div class="arrow"></div>
+		</div> -->
+<!-- 		
+	<div class="arrow"></div> -->
 	
 	<!-- Text -->
 	<h4>
-	<span>
-		РЕАЛИЗОВЫВАЕТСЯ ЗАВЕТНАЯ МЕЧТА!
+	<span class="caption5">
+		Выиграть титул царицы гуннов на конкурсе «Мисс Аттила-2018» и приз 1000$ 16 декабря
 	</span>
 	</h4>
 	
@@ -255,7 +255,7 @@
 	<!-- Header -->
 	<h2 class="cre-animate" data-animation="slide-up-from-bottom" data-speed="800" data-delay="0" data-offset="90%" data-easing="easeOutBack">
 		<p style="font-size: 30px;">Генеральный спонсор</p>
-		<a href="http://attila.kg/" style="display: block;"><img src="images/mark.png" alt="" style="margin: 0 auto"></a>
+		<a href="http://attila.kg/" target="_blank" style="display: block;"><img src="images/mark.png" alt="" style="margin: 0 auto"></a>
 	<span>
 		<b>НАШИ</b> партнеры
 	</span>
