--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 	<div class="social-block" style="padding-left: 120px;float: right;">
 		<img src="images/phone-icon.png" alt="" style="width:30px;">
 		<img src="images/WhatsApp.png" alt="" style="width:30px;">
-		<a href="tel:88005558927" class="phone">+996 (555) 577 100</a>
+		<a href="tel:88005558927" class="phone">+996 555 577 100</a>
 		<a href="https://www.facebook.com/attilasteak" target="_blank"><img src="images/1600.png" alt="" style="width:25px;margin-right: 7px;margin-left: 7px;"></a>
 		<a href="https://www.instagram.com/attilasteak/" target="_blank"><img src="images/instagram_icon-icons.com_49943.png" alt="" style="width:25px;margin-right: 7px;margin-left: 7px;"></a>
 	</div>
